--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,20 +4,19 @@
 $gray-medium-light: #eaeaea;
 /* общие */
 body {
-padding-top: 60px;
+  padding-top: 60px;
 }
 section {
-overflow: auto;
+  overflow: auto;
 }
 textarea {
-resize: vertical;
+  resize: vertical;
 }
 .center {
-text-align: center;
-}
-
-.center h1 {
-margin-bottom: 10px;
+  text-align: center;
+  h1 {
+    margin-bottom: 10px;
+    }
 }
 
 /* правила для текста */
@@ -26,53 +25,53 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-font-size: 3em;
-letter-spacing: -2px;
-margin-bottom: 30px;
-text-align: center;
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 h2 {
-font-size: 1.2em;
-letter-spacing: -1px;
-margin-bottom: 30px;
-text-align: center;
-font-weight: normal;
-color: #777;
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #777;
 }
 
 p {
-font-size: 1.1em;
-line-height: 1.7em;
+  font-size: 1.1em;
+  line-height: 1.7em;
 }
 
 /* заголовок */
 #logo {
-float: left;
-margin-right: 10px;
-font-size: 1.7em;
-color: #fff;
-text-transform: uppercase;
-letter-spacing: -1px;
-padding-top: 9px;
-font-weight: bold;
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
 }
 
 #logo:hover {
-color: #fff;
-text-decoration: none;
+color:white;
+  text-decoration: none;
 }
 
 /* подвал */
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid $gray-medium-light;
   color: $gray-light;
   a {
-    color: #555;
+    color: $gray-light;
     &:hover {
-    color: #222;
+    color: $gray-darker;
   }
   }
   small {
