--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,11 @@
       <section class="stats">
         <%= render 'shared/stats' %>
       </section>
-      <section class="micropost_form">
+      <%# <section class="micropost_form">
         <%= render 'shared/micropost_form' %>
+      <%# </section> %>
+      <section class="micropost_form">
+        <%= render 'shared/cock_form' %>
       </section>
     </aside>
     <div class="col-md-8">
