--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,15 +7,12 @@
       <section class="stats">
         <%= render 'shared/stats' %>
       </section>
-      <%# <section class="micropost_form">
-        <%= render 'shared/micropost_form' %>
-      <%# </section> %>
       <section class="micropost_form">
         <%= render 'shared/cock_form' %>
       </section>
     </aside>
     <div class="col-md-8">
-      <h3>Micropost Feed</h3>
+      <h3>Feed of cocks</h3>
       <%= render 'shared/feed' %>
     </div>
   </div>
