--- a/app/views/cocks/_cock.html.erb
+++ b/app/views/cocks/_cock.html.erb
@@ -1,10 +1,10 @@
 <li>
-    <%= link_to gravatar_for(cock.user), cock.user %>
+    <div class="gravatar">
+        <%= image_tag(cock.user.avatar.url, class: 'micro_avatar') if cock.user.avatar?  %>
+    </div>  
     <span class="user"><%= link_to cock.user.name, cock.user %></span>
     <span class="content">
         <%= "My cock size #{cock.size} #{cock.emoji}" %>
-        <%# <%= image_tag micropost.picture.url if micropost.picture? %>
-    </span>
     <span class="timestamp">
         Posted <%= time_ago_in_words(cock.created_at) %> ago.
         <%# <% if current_user?(cock.user) %>
