--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,8 @@
-<%= link_to gravatar_for(current_user), current_user %>
+<%# <%= link_to gravatar_for(current_user), current_user %>
+<div class="gravatar">
+    <%= image_tag current_user.avatar.url if current_user.avatar? %>
+</div>
+
 <h1><%= current_user.name %></h1>
 <span><%= link_to "view my profile", current_user %></span>
 <span><%= pluralize(current_user.cocks.count, "cock sizes") %></span>
