--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,7 @@
 <li>
-    <%= gravatar_for user %>
+    <div class="gravatar">
+        <%= image_tag(user.avatar.url, class: 'micro_avatar') if user.avatar?  %>
+    </div>
     <%= link_to user.name, user %>
     <% if current_user.admin? && !current_user?(user) %>
         <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
