--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,11 +12,19 @@
       <%= f.password_field :password, class: 'form-control' %>
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
+      <span class="picture">
+        <%= f.file_field :avatar, accept: 'image/jpeg,image/gif,image/png'%>
+      </span>
       <%= f.submit "Save changes", class: "btn btn-primary" %>
     <% end %>
-  <div class="gravatar_edit">
-    <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails" target="_blank">change</a>
-  </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  $('#user_avatar').bind('change', function() {
+    size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
