--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -2,17 +2,19 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-      <%= gravatar_for @user %>
+      <div class="gravatar">
+        <%= image_tag @user.avatar.url if @user.avatar?  %>
+      </div>  
       <h1><%= @user.name %></h1>
       <span><%= link_to "view my profile", @user %></span>
-      <span><b>Microposts:</b> <%= @user.microposts.count %></span>
+      <span><b>Cocks:</b> <%= @user.microposts.count %></span>
     </section>
     <section class="stats">
       <%= render 'shared/stats' %>
       <% if @users.any? %>
         <div class="user_avatars">
           <% @users.each do |user| %>
-            <%= link_to gravatar_for(user), user %>
+            <%= image_tag(user.avatar.url, class: 'micro_avatar') if user.avatar?  %>
           <% end %>
         </div>
       <% end %>
