Added like fature with tests

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -288,3 +288,13 @@ span.picture {
   width: 65px;
   height: 65px;
 }
+
+.like_line{
+  margin-left: 40%;
+}
+
+.like_avatar{
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+}
